support_tools/swigwin-3.0.12/Examples/test-suite/errors/c_insert_missing.i
%module xxx

%insert("header") "missing_file.i";
